# rss-reader

./: Cargo.toml  README.md
rss-reader-lib/: Cargo.toml
rss-reader-lib/src/: feed.rs  lib.rs  rss.rs  rss_item.rs
rss-reader-lib/src/store/: feed.rs  migrations.rs  mod.rs  store.sql
src/: main.rs
