[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rss-reader-lib = { path = "rss-reader-lib" }
tokio = { version = "1", features = ["full"] }
